--- a/.env.prod
+++ b/.env.prod
@@ -65,8 +65,8 @@ AUTH0_AUDIENCE=smartspd-api
 ENVIRONMENT=production
 LOG_LEVEL=INFO
 
-# API URL for frontend
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# API URL for frontend (server-side calls within container)
+NEXT_PUBLIC_API_URL=http://backend:8000
 
 # File upload limits
 MAX_FILE_SIZE=10485760  # 10MB in bytes
