--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -36,7 +36,7 @@ RUN mkdir -p /app/logs /app/uploads \
     && chown -R appuser:appuser /app
 
 # Copy entrypoint script
-COPY docker/entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh \
     && chown appuser:appuser /entrypoint.sh
 
